<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SCROLLER_ID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/covid19background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".model.HelpActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#AA040D"
            android:text="@string/author_title"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="123dp"
            android:layout_marginTop="16dp"
            android:background="#9F0422"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="8sp"
            android:text="@string/author"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#9F0422"
            android:text="@string/how_to_play_the_game"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <TextView
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="0dp"
            android:layout_height="97dp"
            android:layout_marginTop="16dp"
            android:background="#9F0422"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="8sp"
            android:text="@string/goal_of_game"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="0dp"
            android:layout_height="116dp"
            android:layout_marginTop="16dp"
            android:background="#9F0422"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="8sp"
            android:text="@string/clicking_covid_cell"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <TextView
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="0dp"
            android:layout_height="97dp"
            android:layout_marginTop="16dp"
            android:background="#9F0422"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="8sp"
            android:text="@string/clicking_normal_cell"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

        <TextView
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="0dp"
            android:layout_height="97dp"
            android:layout_marginTop="16dp"
            android:background="#9F0422"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="8sp"
            android:text="@string/scanning_cells"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
